src/styles/_school.scss
.school-page {
  .btn.print-school-page {
    clear: both;
    border: solid 3px #e7e9ff;
    line-height: 1;
    width: 200px;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-bottom: 0.5rem;
    color: #737373;
    text-transform: uppercase;
    font-weight: 700;
    font-size: 1.2rem;
    background-color: #fff;
    margin-top: 2rem;
  }
  .school-hero {
    position: relative;
    .map-section {
      min-height: 300px;
      cursor: default;
      .map-parent {
        & > div {
          cursor: default !important;
        }
      }
    }
  }
  .row {
    &.school-metadata,
    &.custom-feeder-prose,
    &.info-school-top,
    &.info-school-bottom,
    &.info-robotext,
    &.info-demographics {
      padding-top: 1rem;
      padding-bottom: 1rem;
    }
    &.school-metadata {
      margin-top: 3rem;
      h2 {
        font-size: 2.8rem;
      }
      .metric-collection {
        h4 {
          font-size: 2rem;
        }
        .n-i-scale {
          width: 92%;
        }
      }
      .custom-feeder {
        .demo-callout {
          width: 100%;
          display: flex;
          background-color: #ebede3;
          font-family: Halyard;
          padding: 42px;
          margin-top: 1.6rem;
          .parent-label {
            width: 40%;
            font-size: 1.8rem;
            padding-right: 1.6rem;
            hr {
              height: 4px;
              width: 40%;
              background-color: #e55934;
              margin-left: 0;
            }
          }
          .demographics {
            width: 60%;
            font-size: 1.6rem;
            .percent {
              margin-right: 0.4rem;
              font-size: 1.9rem;
              line-height: 2.9rem;
              font-weight: 500;
            }
            span {
              // display: block;
              // width: 100%;
            }
          }
        }
      }
    }
    &.custom-feeder-prose,
    &.info-robotext,
    &.info-school-top,
    &.info-school-bottom,
    &.info-demographics {
      font-weight: 300;
      font-size: 1.6rem;
    }
    &.custom-feeder-prose {
      .metric-group {
        font-size: 1rem;
      }
    }
  }
  .row-print-only {
    page-break-inside: avoid;
    visibility: hidden;
    .vcenter {
      display: flex;
      align-items: center;
      justify-content: center;
    }
    .cpal-logo {
      padding: 2rem 0;
      width: 88px;
      height: 104px;
      display: block;
      background-image: url("../images/cpal-logo.svg");
      background-size: 100%;
      background-repeat: no-repeat;
      margin-left: auto;
      margin-right: auto;
    }
    .funder-wrapper {
      padding: 4rem 0 2rem;
      display: block;
      a {
        width: 50%;
        margin-left: auto;
        margin-right: auto;
        display: block;
        img {
          width: 100%;
        }
      }
      .text {
        font-family: "Louize Display";
        font-style: italic;
        font-weight: normal;
        // font-size: 14px;
        line-height: 1.5;
        text-align: center;
        color: #2c390b;
        font-size: 1.8rem;
        width: 100%;
      }
    }
  }
  .row-metric-group {
    page-break-inside: avoid;
    &:last-of-type {
      margin-bottom: 6rem;
    }
    .metric-collection {
      display: flex;
      flex-wrap: wrap;
      .metric-group {
        padding: 2rem 0;
        width: 100%;
        font-size: 1rem !important;
        h6 {
          font-size: 1.6rem;
          font-weight: 400;
          padding-bottom: 0.6rem;
          line-height: 1.9rem;
          width: 85%;
        }
        @include media-breakpoint-up(md) {
          width: 49%;
          flex: 0 0 49%;
          // padding: 0;
          // &:nth-child(odd) {
          //   padding-right: 2rem;
          // }
        }
        .n-i-scale {
          width: 80%;
        }
      }
      h5 {
        padding: 2rem 0 1rem;
        width: 100%;
        flex: 0 0 100%;
        font-size: 2rem;
      }
      &.metric-collection-header {
        h6 {
          font-size: 1.6rem;
          font-weight: 400;
        }
      }
    }
  }
  // General styling for the scale
  .metric-group {
    .n-i-scale-parent {
      .n-i-scale-linear {
        margin-top: 4rem;
        .n-i-scale-line {
          border-bottom: 1px dotted #606b44;
          &:after,
          &:before {
            content: "";
            display: block;
            position: absolute;
            height: 17px;
            top: -8px;
            width: 1px;
            background-color: #606b44;
          }
          &:before {
            right: 0;
          }
          .n-i-scale-mean {
            position: absolute;
            top: -8px;
            .n-i-scale-mean-line {
              // position: absolute;
              height: 19px;
              width: 0.5px;
              // top: -8px;
              background-color: #2c390b;
            }
            .n-i-scale-mean-value {
              width: 200px;
              text-align: center;
              margin-left: -100px;
              font-size: 1.5rem;
              font-weight: 300;
            }
          }
          .n-i-scale-hash {
            background-color: transparent !important;
            top: -28px !important;
            .n-i-scale-hash-value {
              width: 200px;
              text-align: center;
              margin-left: -100px;
              height: 2rem;
              font-family: Halyard;
              font-weight: 500;
              font-size: 1.8rem;
              line-height: 1.8rem;
            }
            .n-i-scale-hash-dot {
              background-color: #e55934;
              width: 17px;
              height: 17px;
              border-radius: 8.5px;
              // top: -8px !important;
              margin-left: -8px;
            }
          }
        }
      }
    }
    .n-i-scale .n-i-scale-minmax {
      margin-top: 1rem;
      font-size: 1.5rem;
      font-weight: 300;
    }
    .n-i-scale-hash {
      top: 1px !important;
    }
    .n-i-scale .n-i-scale-parent .n-i-scale-quintiles {
      border: 1px solid #ccc;
      height: 12px;
      box-sizing: content-box;
      margin-top: 1.5rem;
      &:after {
        display: none;
      }
      .n-i-scale-quintile {
        height: 100%;
        border-right: 1px solid #ccc;
        width: 16.665%;
        &:after,
        &:before {
          display: none;
        }
        &.quintile-2 {
          width: 33.33%;
        }
        &.quintile-4 {
          border-right: none;
        }
        &.quintile-0:before,
        &.quintile-4:after {
          display: none;
        }
      }
    }
  }
}
@media print {
  * {
    -webkit-print-color-adjust: exact !important; /*Chrome, Safari */
    color-adjust: exact !important; /*Firefox*/
  }
  .sticky-header {
    display: none !important;
  }
  // Hide menu elements
  .school-hero {
    .menu-section,
    .menu-component .menu-panel {
      display: none !important;
      height: 0 !important;
      width: 0 !important;
    }
  }
  // Hide print button
  .print-school-page {
    display: none !important;
    height: 0 !important;
    width: 0 !important;
  }
  // Hide footer
  .sign-up-bar,
  .footer {
    display: none !important;
    height: 0 !important;
    width: 0 !important;
    visibility: hidden;
  }
  .row-print-only {
    visibility: visible !important;
  }
}

